# kmriiwa_ws

./: .gitignore  README.md  allclasses-frame.html  allclasses-index.html  allclasses-noframe.html  allclasses.html  allpackages-index.html  constant-values.html  deprecated-list.html  element-list  help-doc.html  index.html  member-search-index.js  overview-tree.html  package-search-index.js  type-search-index.js
.metadata/: version.ini
API_ROS2_Sunrise/: AutomaticResumeBackgroundTask.html  CheckOpenPorts.html  DataController.html  ISocket.html  KMP_commander.MonitorEmergencyStopThread.html  KMP_commander.MonitorKMPCommandConnectionsThread.html  KMP_commander.html  KMP_sensor_reader.MonitorLaserConnectionThread.html  KMP_sensor_reader.MonitorOdometryConnectionThread.html  KMP_sensor_reader.html  KMP_status_reader.MonitorKMPStatusConnectionsThread.html  KMP_status_reader.html  KMPjogger.JogTimerTask.html  KMPjogger.html  KMRiiwaSunriseApplication.html  LBR_commander.MonitorEmergencyStopThread.html  LBR_commander.MonitorLBRCommandConnectionsThread.html  LBR_commander.SplineMotionListener.html  LBR_commander.html  LBR_sensor_reader.MonitorSensorConnectionThread.html  LBR_sensor_reader.html  LBR_status_reader.MonitorLBRStatusConnectionsThread.html  LBR_status_reader.html  Node.html  PTPpoint.html  SafetyStateListener.html  TCPSocket.html  UDPSocket.html  fdsf.html  package-frame.html  package-summary.html  package-tree.html  package-use.html
application/: PositionAndGMSReferencing.html  package-use.html
docs/: overview-frame.html  overview-summary.html  overview-tree.html  package-list
index-files/: index-1.html  index-10.html  index-11.html  index-12.html  index-13.html  index-14.html  index-15.html  index-16.html  index-17.html  index-18.html  index-19.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index-7.html  index-8.html  index-9.html
kmr_behaviortree/: CMakeLists.txt  README.md  package.xml
kmr_bringup/: CMakeLists.txt  README.md  package.xml
kmr_cartographer/: CMakeLists.txt  README.md  package.xml
kmr_communication/: CMakeLists.txt  README.md  package.xml
kmr_manipulator/: CMakeLists.txt  README.md  package.xml
kmr_moveit2/: CMakeLists.txt  README.md  package.xml
kmr_moveit2/config/: iiwa14.srdf  moveit_cpp.yaml  start_positions.yaml
kmr_moveit2/launch/: moveit.launch.py
kmr_moveit2/src/: run_moveit.cpp  run_moveit_node.cpp
kmr_msgs/: CMakeLists.txt  README.md  package.xml
kmr_msgs/action/: Gripper.action  MoveManipulator.action  PlanToFrame.action
kmr_msgs/msg/: LbrStatusdata.msg
kmr_navigation2/: CMakeLists.txt  README.md  package.xml
kmr_simulation/: CMakeLists.txt  README.md  package.xml
kmr_slam/: CMakeLists.txt  README.md  package.xml  rtabmap.pgm  rtabmap.yaml
kmr_sunrise/: AutomaticResumeBackgroundTask.java  CMakeLists.txt  README.md  SafetyStateListener.java  package.xml
kuka_behaviortree/: CMakeLists.txt  package.xml
kuka_behaviortree/behavior_trees/: m_tree.xml  manipulator_tree.xml  test.xml
kuka_behaviortree/include/kuka_behaviortree/: behavior_tree_engine.hpp  bt_action_node.hpp
kuka_behaviortree/launch/: bt.launch.py
kuka_behaviortree/plugins/action/: close_gripper.cpp  move_manipulator.cpp  navigation.cpp  object_search.cpp  open_gripper.cpp  plan_manipulator_path.cpp
kuka_behaviortree/plugins/condition/: frame_empty.cpp
kuka_behaviortree/src/: behavior_tree_engine.cpp  behavior_tree_node.cpp  behavior_tree_node2.cpp
kuka_bringup/: CMakeLists.txt  README.md  package.xml
kuka_bringup/launch/: rviz.launch.py  state_publisher.launch.py
kuka_bringup/rviz/: tf.rviz  tf2.rviz
kuka_bringup/scripts/: dummy_joint_states.cpp
kuka_bringup/urdf/: _d435.urdf.xacro  iiwa14.urdf  kuka_correct.urdf  kuka_iiwa.urdf  kuka_withD435.urdf  kukatest.urdf  tb_withD435.urdf
kuka_cartographer/: CMakeLists.txt  README.md  package.xml
kuka_communication/: CMakeLists.txt  README.md  package.xml
kuka_communication/launch/: odom_laser.launch.py  sunrise_communication.launch.py
kuka_communication/msg/: KmpStatusdata.msg  LbrStatusdata.msg
kuka_communication/nodes/: kmp_commands_node.py  kmp_laserscan_node.py  kmp_odometry_node.py  kmp_statusdata_node.py  lbr_commands_node.py  lbr_sensordata_node.py  lbr_statusdata_node.py  test2.py
kuka_communication/param/: bringup.yaml
kuka_communication/script/: dummy_data.py  dummy_odom.py  server_TCP.py  server_UDP.py  tcpSocket.py  test.py  udpSocket.py
kuka_communication/scripts/: TCPSocket.py  TCPconnector_withListener.py  UDPSocket.py  UDPconnector_withListener.py  buffer.py  client_TCP.py  client_UDP.py  client_lib.py  client_lib_kmp.py  client_lib_lbr.py  config.txt  dummy_data.py  server.py  server_TCP.py  server_kmp.py  static_broadcaster.py  test.py
kuka_manipulator/: CMakeLists.txt  README.md  package.xml
kuka_manipulator/action/: CloseGripper.action  DriveToFrame.action  ObjectSearch.action
kuka_manipulator/launch/: object_detection.launch.py
kuka_manipulator/model/: circbox.labels  circbox.xml
kuka_manipulator/nodes/: manipulator_node.py
kuka_manipulator/nodes/gripper/: gripper_node.py
kuka_manipulator/nodes/realsense/: object_search_node.py
kuka_manipulator/param/: object_detection.yaml
kuka_manipulator/script/: errorcodes.py  gripper_msgs.py
kuka_moveit2/: .project  CMakeLists.txt  package.xml
kuka_moveit2/config/: controllers.yaml  iiwa14.srdf  iiwa_controllers.yaml  move_to_pose.yaml  start_positions.yaml
kuka_moveit2/launch/: moveit.launch.py
kuka_moveit2/src/: move_to_pose.cpp  run_moveit.cpp
kuka_navigation2/: CMakeLists.txt  README.md  package.xml
kuka_simulation/: CMakeLists.txt  README.md  package.xml
kuka_sunrise/: API_ROS2_KMR.java  API_ROS2_KUKA1211TEST.java  API_ROS2_KUKA1211roboticsapi.java  API_ROS2_KUKA_KMP.java  API_ROS2_KUKA_KMP_NAV.java  API_ROS2_KUKA_KMP_roboticsAPI.java  API_ROS2_Sunrise.java  API_ROS_KUKA.java  AutomaticResumeBackgroundTask.java  CMakeLists.txt  CheckOpenPorts.java  DataController.java  ISocket.java  KMP_commander.java  KMP_sensor_reader.java  KMP_status_reader.java  (+12 more)
(+245 files in other folders)
